Loading instead of XX

--- a/Serene1/Serene1.Web/Modules/AdminLTE/DashboardV2.cshtml
+++ b/Serene1/Serene1.Web/Modules/AdminLTE/DashboardV2.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Command control";
 }
 
 @section Head {
@@ -91,7 +91,7 @@
             <div class="info-box-content">
                 <span class="info-box-text">Batch Id</span>
 
-                <span id="nextBatchID" class="info-box-number"> XX </span>
+                <span id="nextBatchID" class="info-box-number"> Loading... </span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -100,7 +100,7 @@
             <span class="info-box-icon bg-gray"><i><img class="match-block" src="~/Content/beerAssets/beertap.svg" /> </i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Amount to Produce</span>
-                <span id="nextProductAmount" class="info-box-number">XX</span>
+                <span id="nextProductAmount" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -111,7 +111,7 @@
             <span class="info-box-icon bg-green"><i><img class="match-block" src="~/Content/beerAssets/speedometer.svg" /></i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Speed</span>
-                <span id ="machineSpeed" class="info-box-number">XX</span>
+                <span id ="machineSpeed" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -127,7 +127,7 @@
             </span>
             <div class="info-box-content">
                 <span class="info-box-text">Produced</span>
-                <span id="produced" class="info-box-number">XX</span>
+                <span id="produced" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -136,7 +136,7 @@
             <span class="info-box-icon bg-gray"><i><img style="display: block; margin-left: auto; margin-top: 10%; margin-right: auto; height:72px; width: auto; vertical-align: middle;" src="~/Content/beerAssets/accept.svg" /> </i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Acceptable Amount Produced</span>
-                <span id ="acceptableAmountProduced" class="info-box-number">XX</span>
+                <span id ="acceptableAmountProduced" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -147,7 +147,7 @@
             <span class="info-box-icon bg-bg-gray"><i><img style="display: block;margin-left: auto;margin-top: 10%;margin-right: auto;height:72px; width: auto; vertical-align: middle;" src="~/Content/beerAssets/defect.svg" /></i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Unacceptable Amount Produced</span>
-                <span id ="unacceptableAmountProduced"class="info-box-number">XX</span>
+                <span id ="unacceptableAmountProduced"class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -163,7 +163,7 @@
             </span>
             <div class="info-box-content">
                 <span class="info-box-text">Temperature</span>
-                <span id ="temperature" class="info-box-number">XX</span>
+                <span id ="temperature" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -172,7 +172,7 @@
             <span class="info-box-icon bg-gray"><i><img class="match-block" src="~/Content/beerAssets/humidity.png" /> </i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Humidity</span>
-                <span id = "humidity" class="info-box-number">XX</span>
+                <span id = "humidity" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
@@ -183,7 +183,7 @@
             <span class="info-box-icon bg-green"><i><img class="match-block" src="~/Content/beerAssets/vibration.svg" /></i></span>
             <div class="info-box-content">
                 <span class="info-box-text">Vibration</span>
-                <span id ="vibration" class="info-box-number">XX</span>
+                <span id ="vibration" class="info-box-number">Loading...</span>
             </div><!-- /.info-box-content -->
         </div><!-- /.info-box -->
     </div><!-- /.col -->
