--- a/Serene1/Serene1.Web/Modules/Membership/Account/AccountLogin.AdminLTE.cshtml
+++ b/Serene1/Serene1.Web/Modules/Membership/Account/AccountLogin.AdminLTE.cshtml
@@ -68,7 +68,7 @@
             </a>
         </div>
         <a href="@Url.Content("~/Account/ForgotPassword")">@Texts.Forms.Membership.Login.ForgotPassword</a><br>
-       
+        <a href="@Url.Content("~/Account/SignUp")" class="text-center">@Texts.Forms.Membership.Login.SignUpButton</a>
     </div>
 </div>
 
