--- a/Serene1/Serene1.Web/Modules/AdminLTE/Examples/Login.cshtml
+++ b/Serene1/Serene1.Web/Modules/AdminLTE/Examples/Login.cshtml
@@ -54,6 +54,7 @@
         </div>
         <!-- /.social-auth-links -->
         <a href="~/Account/ForgotPassword">I forgot my password</a><br>
+        <a href="~/AdminLTE/Examples/Register" class="text-center">Register a new membership</a>
     </div>
     <!-- /.login-box-body -->
 </div>
