--- a/Serene1/Serene1.Web/Modules/AdminLTE/DashboardV2.cshtml
+++ b/Serene1/Serene1.Web/Modules/AdminLTE/DashboardV2.cshtml
@@ -193,10 +193,10 @@
     <div class="col-md-12">
         <div class="box">
             <div class="box-header with-border">
-                <h3 class="box-title">Monthly Recap Report</h3>
+                <h3 class="box-title">Inventory</h3>
                 <div class="box-tools pull-right">
                     <button class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
-                    <div class="btn-group">
+                    @*<div class="btn-group">
                         <button class="btn btn-box-tool dropdown-toggle" data-toggle="dropdown"><i class="fa fa-wrench"></i></button>
                         <ul class="dropdown-menu" role="menu">
                             <li><a href="#">Action</a></li>
@@ -205,22 +205,22 @@
                             <li class="divider"></li>
                             <li><a href="#">Separated link</a></li>
                         </ul>
-                    </div>
+                    </div>*@
                 </div>
             </div><!-- /.box-header -->
             <div class="box-body">
-                <div class="row">
+                @*<div class="row">
                     <div class="col-md-8">
                         <p class="text-center">
                             <strong>Sales: 1 Jan, 2014 - 30 Jul, 2014</strong>
                         </p>
                         <!-- Sales Chart Canvas -->
                         <div id="plotChart"></div>
-                    </div><!-- /.col -->
+                    </div><!-- /.col -->*@
                     <div class="col-md-4">
-                        <p class="text-center">
+                        @*<p class="text-center">
                             <strong>Inventory</strong>
-                        </p>
+                        </p>*@
                         <div class="progress-group">
                             <span class="progress-text">Barley</span>
                             <span id="barley" class="progress-number"><b>80</b>/100%</span>
@@ -265,7 +265,7 @@
                         </div>
                         <!-- /.progress-group
                         </div><!-- /.col -->
-                    </div><!-- /.row -->
+                    @*</div>*@<!-- /.row -->
                 </div><!-- ./box-body -->
 
             </div><!-- /.box -->
@@ -459,7 +459,7 @@
             }
         };
 
-        Plotly.newPlot('plotChart', data, layout);
+        //Plotly.newPlot('plotChart', data, layout);
     })
 
 
