--- a/Serene1/Serene1.Web/Modules/Membership/Account/AccountLogin.cshtml
+++ b/Serene1/Serene1.Web/Modules/Membership/Account/AccountLogin.cshtml
@@ -137,7 +137,7 @@
 
 <script id="Template_LoginPanel" type="text/template">
 <div class="flex-layout">
-    <div class="logo"></div>
+    @*<div class="logo"></div>*@
     <h3>@Texts.Forms.Membership.Login.FormTitle</h3>
     <form id="~_Form" action="">
         <div class="s-Form">
@@ -152,7 +152,7 @@
             </div>
             <div class="actions">
                 <a href="@Url.Content("~/Account/ForgotPassword")"><i class="fa fa-angle-right"></i>&nbsp;@Texts.Forms.Membership.Login.ForgotPassword</a>
-                <a href="@Url.Content("~/Account/SignUp")"><i class="fa fa-angle-right"></i>&nbsp;@Texts.Forms.Membership.Login.SignUpButton</a>
+                @*<a href="@Url.Content("~/Account/SignUp")"><i class="fa fa-angle-right"></i>&nbsp;@Texts.Forms.Membership.Login.SignUpButton</a>*@
                 <div class="clear"></div>
             </div>
         </div>
